<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.gudong.gankio.ui.activity.SignUpActivity"
    android:orientation="vertical">
    <include layout="@layout/model_toolbar2"/>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_account"
            android:hint="帐号"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_password"
            android:layout_gravity="center_horizontal"
            android:hint="密码"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_signin"
            android:id="@+id/bt_sign_in"
            android:layout_gravity="center_horizontal"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_find_pwd"
                android:id="@+id/bt_find_password"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/md_grey_600"
                android:background="@null"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_signup"
                    android:id="@+id/bt_sign_up"
                    android:textColor="@color/md_grey_600"
                    android:background="@null"/>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
